Deployed with CNAME

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://gregbabiars.com
+url: http://gbabiars.github.io
 title: Greg Babiars' Blog
 subtitle: Random thoughts of a web developer
 author: Greg Babiars
