Updated about me on aside.

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: Greg Babiars
 subtitle:
 author: Greg Babiars
 simple_search: http://google.com/search
-description: I'm a software developer with a front end focus living in Panama City, FL.  I'm passionate about javascript and web technologies and a diehard Arizona Wildcats fan.
+description: I'm a software developer with a front end focus living in the Phoenix, AZ area.  I'm passionate about javascript and web technologies and a diehard Arizona Wildcats fan.
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
